# coverpalette

./: .gitignore  AUTHORS.rst  LICENSE  README.md  USAGE.md  environment.yml  example_notebook.ipynb  pyproject.toml  setup.py
coverpalette/: __init__.py  album_art.py  convert.py
covers2colors/: __init__.py  album_art.py  cli.py  colorblind.py  convert.py  keys_template.json  testing.ipynb
